laurent and Grishchenko

--- a/i_team.html
+++ b/i_team.html
@@ -36,8 +36,16 @@
           <br>
           <h1>KAUST</h1>
           <br>
-          <h2>Postdocs<br>
+          <h2>Research Scientists
           </h2>
+          <ul>
+            <li><a
+                href="https://www.gipsa-lab.grenoble-inp.fr/%7Elaurent.condat/">Laurent
+                Condat</a>
+              (11/2019-present)
+            </li>
+          </ul>
+          <h2>Postdocs </h2>
           <ul>
             <li><a href="https://mher-safaryan.github.io">Mher Safaryan</a>
               (10/2019-present)<br>
@@ -57,8 +65,7 @@
             <li><a href="https://aritradutta.weebly.com">Aritra Dutta</a>
               (5/2017<span class="style1" style="width: 300px;">-5/2019</span>)</li>
           </ul>
-          <h2>PhD Students<br>
-          </h2>
+          <h2>PhD Students </h2>
           <ul>
             <li><a href="https://samuelhorvath.github.io">Samuel Horváth</a>
               (1/2019-present)</li>
@@ -71,43 +78,14 @@
                 Hanzely</a> (9/2017<span class="style1" style="width:
                 300px;">-</span>present)</li>
           </ul>
-          <h2>MS Students<br>
-          </h2>
+          <h2>MS Students </h2>
           <ul>
             <li><a href="https://alyazeedbasyoni.wixsite.com/blog">Alyazeed
-
-
-
-
-
                 Basyoni</a> (8/2019-present)</li>
             <li><a href="https://slavomirhanzely.wordpress.com">Slavomír
                 Hanzely</a> (8/2019-present)<br>
             </li>
             <li><a href="https://vcc.kaust.edu.sa/Pages/Gasanov.aspx">Elnur
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
                 Gasanov</a> (9/2018-present)</li>
             <li><a href="https://www.dmitry-kovalev.com/">Dmitry Kovalev</a>
               (9/2018-present)</li>
@@ -115,35 +93,6 @@
               (8/2017-12/2018)</li>
             <li><a
                 href="https://vcc.kaust.edu.sa/Pages/Sailanbayev.aspx">Alibek
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
                 Sailanbayev</a> (8/2017-12/2018)<br>
             </li>
           </ul>
@@ -152,6 +101,8 @@
           <ul>
             <li><a
                 href="https://www.imo-official.org/participant_r.aspx?id=26060">Hoang
+
+
                 H. Nguyen</a> (Minerva Schools at KGI), 10/2019-present<br>
             </li>
             <li><a href="https://rka97.github.io">Ahmed Khaled</a>
@@ -184,10 +135,14 @@
 
 
 
+
+
                 Sokolov</a> (Moscow Institute of Physics and
               Technology), 1/2019-2/2019</li>
             <li><a
                 href="https://eduardgorbunov.github.io/index.html#header3-a">Eduard
+
+
 
 
 
@@ -241,10 +196,14 @@
 
 
 
+
+
                 Elsukov</a> (Moscow Institute of Physics and
               Technology), 1/2019-2/2019</li>
             <li><a
                 href="https://www.researchgate.net/profile/Egor_Shulgin">Egor
+
+
 
 
 
@@ -294,10 +253,14 @@
 
 
 
+
+
                 Kovalev</a> (Moscow Institute of Physics and
               Technology), 1/2018-2/2018<br>
             </li>
             <li><a href="https://vcc.kaust.edu.sa/Pages/Gasanov.aspx">Elnur
+
+
 
 
 
@@ -352,10 +315,14 @@
 
 
 
+
+
                 Gorbunov</a> (Moscow Institute of Physics and
               Technology), 1/2018-2/2018</li>
             <li><a
                 href="https://www.imo-official.org/participant_r.aspx?id=26648">Slavomír
+
+
 
 
 
@@ -372,6 +339,8 @@
                 href="https://sands.kaust.edu.sa/authors/atal-narayan-sahu/">Atal
 
 
+
+
                 Sahu</a> (IIT Kanpur), 5/2017-7/2017, now: PhD student @
               KAUST<br>
             </li>
@@ -379,8 +348,12 @@
           <h2>Visitors<br>
           </h2>
           <ul>
+            <li><a href="https://grishchenko.org">Dmitriy Grishchenko</a>
+              (Grenoble), 11-12/2019</li>
             <li><a
 href="https://scholar.google.com.hk/citations?user=dQSGQSAAAAAJ&amp;hl=zh-CN">Xiuxian
+
+
 
 
 
@@ -405,12 +378,16 @@ href="https://scholar.google.com.hk/citations?user=dQSGQSAAAAAJ&amp;hl=zh-CN">Xi
 
 
 
+
+
                 Kroshnin</a> (Moscow &amp; Lyon), 4/2019<br>
             </li>
             <li><a href="http://www.maths.ed.ac.uk/%7Es1461357/">Nicolas
                 Loizou</a> (Edinburgh), 4/2019-5/2019</li>
             <li><a
                 href="https://www.researchgate.net/profile/Dmitry_Kamzolov">Dmitry
+
+
 
 
 
@@ -450,11 +427,15 @@ href="https://scholar.google.com.hk/citations?user=dQSGQSAAAAAJ&amp;hl=zh-CN">Xi
 
 
 
+
+
                 Möllenhoff</a> (Munich), 8/2018<br>
             </li>
             <li><a href="http://www.maths.ed.ac.uk/%7Es1461357/">Nicolas
                 Loizou</a> (Edinburgh), 1/2018-3/2018</li>
             <li><a href="http://www.damtp.cam.ac.uk/user/me404/">Matthias
+
+
 
 
 
@@ -522,6 +503,8 @@ href="https://scholar.google.com.hk/citations?user=dQSGQSAAAAAJ&amp;hl=zh-CN">Xi
 
 
 
+
+
                 Doikov</a> (HSE Moscow), 10/2017-11/2017<br>
             </li>
             <li><a href="http://sstich.ch">Sebastian Stich</a> (EPFL),
@@ -535,38 +518,8 @@ href="https://scholar.google.com.hk/citations?user=dQSGQSAAAAAJ&amp;hl=zh-CN">Xi
               (Edinburgh), 4/2017</li>
             <li><a href="https://fhanzely.github.io/index.html">Filip
                 Hanzely</a> (Edinburgh), 4/2017-5/2017</li>
-            <li><a
-href="https://www.liglab.fr/en/useful/directory?%20prenom=Dmitry&amp;nom=GRISHCHENKO">Dmitriy
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-                Grishchenko</a> (HSE Moscow), 4/2017</li>
+            <li><a href="https://grishchenko.org">Dmitriy Grishchenko</a>
+              (HSE Moscow), 4/2017</li>
             <li><a href="https://konstmish.github.io/">Konstantin
                 Mishchenko</a> (ENS/Paris Dauphine), 4/2017</li>
             <li><a href="http://www.maths.ed.ac.uk/%7Es1461357/">Nicolas
@@ -589,6 +542,8 @@ href="https://www.liglab.fr/en/useful/directory?%20prenom=Dmitry&amp;nom=GRISHCH
           </ul>
           <ul>
             <li><a href="http://people.ufpr.br/%7Eademir.ribeiro/">Ademir
+
+
 
 
 
@@ -656,6 +611,8 @@ href="https://www.liglab.fr/en/useful/directory?%20prenom=Dmitry&amp;nom=GRISHCH
 
 
 
+
+
               <br>
             </li>
             <li>current position: Assistant Professor, University of
@@ -663,6 +620,8 @@ href="https://www.liglab.fr/en/useful/directory?%20prenom=Dmitry&amp;nom=GRISHCH
           </ul>
           <ul>
             <li><a href="http://perso.telecom-paristech.fr/%7Eofercoq/">Olivier
+
+
 
 
 
@@ -730,6 +689,8 @@ href="http://www.canterbury.ac.nz/spark/Researcher.aspx?Researcherid=4085405">Ra
 
 
 
+
+
                 Tappenden</a> (2/2012<span class="style1" style="width:
                 300px;">–</span>7/2014)</li>
             <li>current position: Assistant Professor, University of
@@ -739,6 +700,8 @@ href="http://www.canterbury.ac.nz/spark/Researcher.aspx?Researcherid=4085405">Ra
           <ul>
             <li><a
 href="http://researcher.watson.ibm.com/researcher/view.php?person=ie-jakub.marecek">Jakub
+
+
 
 
 
@@ -814,6 +777,8 @@ href="http://researcher.watson.ibm.com/researcher/view.php?person=ie-jakub.marec
 
 
 
+
+
                 Loizou</a> (10/2015<span class="style1" style="width:
                 300px;">–</span>6/2019)</li>
             <li>thesis: Randomized iterative methods for linear systems:
@@ -825,6 +790,8 @@ href="http://researcher.watson.ibm.com/researcher/view.php?person=ie-jakub.marec
           <ul>
             <li><a
                 href="http://www.inf.ed.ac.uk/people/students/Theo_Pavlakou.html">Theo
+
+
 
 
 
@@ -903,6 +870,8 @@ href="http://researcher.watson.ibm.com/researcher/view.php?person=ie-jakub.marec
 
 
 
+
+
                 Csiba</a> (9/2014<span class="style1" style="width:
                 300px;">–present</span>)</li>
             <li>thesis: Data sampling strategies in stochastic
@@ -942,6 +911,8 @@ href="http://researcher.watson.ibm.com/researcher/view.php?person=ie-jakub.marec
 
 
 
+
+
                 Bravi</a> (3/2015<span class="style1" style="width:
                 300px;">–</span>6/2015)</li>
             <li>visiting PhD student from University of Florence, Italy
@@ -951,6 +922,8 @@ href="http://researcher.watson.ibm.com/researcher/view.php?person=ie-jakub.marec
           <ul>
             <li><a
 href="https://scholar.google.com/citations?user=C3ujEF0AAAAJ&amp;hl=zh-CN">Minnan
+
+
 
 
 
@@ -1022,9 +995,13 @@ href="https://scholar.google.com/citations?user=C3ujEF0AAAAJ&amp;hl=zh-CN">Minna
 
 
 
+
+
                 Pavlakou</a> (2015) - MSc dissertation</li>
             <li><a
 href="http://www.inf.ed.ac.uk/people/students/Georgios_Papamakarios.html">George
+
+
 
 
 
@@ -1065,11 +1042,15 @@ href="http://www.inf.ed.ac.uk/people/students/Georgios_Papamakarios.html">George
 
 
 
+
+
                 Labant</a> (2016), Data Scientist at Department of
               Education, United Kingdom<br>
             </li>
             <li><a
                 href="https://uk.linkedin.com/in/jakob-kisiala-5807001b">Jakob
+
+
 
 
 
@@ -1124,9 +1105,13 @@ href="http://www.inf.ed.ac.uk/people/students/Georgios_Papamakarios.html">George
 
 
 
+
+
                 China</a>&nbsp;</li>
             <li>Meensuk Punlavee (2013)&nbsp;</li>
             <li><a href="https://www.linkedin.com/in/abankswatson">Alexander
+
+
 
 
 
@@ -1139,6 +1124,8 @@ href="http://www.inf.ed.ac.uk/people/students/Georgios_Papamakarios.html">George
             </li>
             <li><a
                 href="http://scholar.google.com/citations?user=vMMDhTUAAAAJ&amp;hl=en">Christos
+
+
 
 
 
@@ -1188,6 +1175,8 @@ href="http://www.inf.ed.ac.uk/people/students/Georgios_Papamakarios.html">George
 
 
 
+
+
                 Karanika</a> (2010), Modelling &amp; Analytics Manager
               at Royal Bank of Scotland</li>
             <li>Robie King (2010)&nbsp;</li>
@@ -1210,6 +1199,8 @@ href="http://www.inf.ed.ac.uk/people/students/Georgios_Papamakarios.html">George
             </li>
             <li><a
 href="https://warwick.ac.uk/fac/sci/mathsys/people/students/2014intake/peneva/">Iliana
+
+
 
 
 
@@ -1246,8 +1237,12 @@ href="https://warwick.ac.uk/fac/sci/mathsys/people/students/2014intake/peneva/">
 
 
 
+
+
                 Filipecki</a> (2011, Edinburgh Mathematics), now: <a
                 href="https://de.linkedin.com/in/bartosz-filipecki-24923a85">postdoc
+
+
 
 
 
@@ -1270,6 +1265,8 @@ href="https://www.bloomberg.com/research/stocks/private/person.asp?personId=2645
 
 
 
+
+
                 @ Sagamore Investments </a><br>
             </li>
             <li>Bartosz Filipecki (2010, Edinburgh Mathematics)<br>
@@ -1280,6 +1277,8 @@ href="https://www.bloomberg.com/research/stocks/private/person.asp?personId=2645
             <li><a
                 href="http://esd.sutd.edu.sg/faculty/selin-damla-ahipasaoglu/">Selin
 D.
+
+
 
 
 
@@ -1341,8 +1340,12 @@ D.
 
 
 
+
+
                 Baes</a> (University of Zurich)</li>
             <li><a href="http://maiage.jouy.inra.fr/?q=fr/bergou">Elhoucine
+
+
 
 
 
@@ -1403,6 +1406,8 @@ D.
 
 
 
+
+
                 Eftekhari</a> (The Alan Turing Institute)</li>
             <li><a href="http://www.damtp.cam.ac.uk/people/me404/">Matthias
 
@@ -1434,8 +1439,12 @@ D.
 
 
 
+
+
                 Ehrhardt</a> (Cambridge)</li>
             <li><a href="http://www.iam.fmph.uniba.sk/ospm/Harman/">Radoslav
+
+
 
 
 
@@ -1501,8 +1510,12 @@ D.
 
 
 
+
+
                 Nesterov</a> (Louvain)</li>
             <li><a href="https://www.researchgate.net/profile/Tie_Ni">Tie
+
+
 
 
 
@@ -1535,6 +1548,8 @@ D.
                 Ni</a> (Liaoning Technical University)</li>
             <li><a
                 href="http://www-syscom.univ-mlv.fr/%7Epesquet/index.htm">Jean-Christophe
+
+
 
 
 
@@ -1599,9 +1614,13 @@ D.
 
 
 
+
+
                 Stich</a> (Louvain)</li>
             <li><a
 href="https://www.liverpool.ac.uk/mathematical-sciences/staff/tuomo-valkonen/">Tuomo
+
+
 
 
 
