--- a/i_team.html
+++ b/i_team.html
@@ -36,14 +36,12 @@
           <br>
           <h1>KAUST</h1>
           <br>
-          <h2>Research Scientists
-          </h2>
+          <h2>Research Scientists </h2>
           <ul>
             <li><a
                 href="https://www.gipsa-lab.grenoble-inp.fr/%7Elaurent.condat/">Laurent
-                Condat</a>
-              (11/2019-present)
-            </li>
+
+                Condat</a> (11/2019-present) </li>
           </ul>
           <h2>Postdocs </h2>
           <ul>
@@ -81,11 +79,13 @@
           <h2>MS Students </h2>
           <ul>
             <li><a href="https://alyazeedbasyoni.wixsite.com/blog">Alyazeed
+
                 Basyoni</a> (8/2019-present)</li>
             <li><a href="https://slavomirhanzely.wordpress.com">Slavomír
                 Hanzely</a> (8/2019-present)<br>
             </li>
             <li><a href="https://vcc.kaust.edu.sa/Pages/Gasanov.aspx">Elnur
+
                 Gasanov</a> (9/2018-present)</li>
             <li><a href="https://www.dmitry-kovalev.com/">Dmitry Kovalev</a>
               (9/2018-present)</li>
@@ -93,6 +93,7 @@
               (8/2017-12/2018)</li>
             <li><a
                 href="https://vcc.kaust.edu.sa/Pages/Sailanbayev.aspx">Alibek
+
                 Sailanbayev</a> (8/2017-12/2018)<br>
             </li>
           </ul>
@@ -101,6 +102,7 @@
           <ul>
             <li><a
                 href="https://www.imo-official.org/participant_r.aspx?id=26060">Hoang
+
 
 
                 H. Nguyen</a> (Minerva Schools at KGI), 10/2019-present<br>
@@ -137,10 +139,12 @@
 
 
 
+
                 Sokolov</a> (Moscow Institute of Physics and
               Technology), 1/2019-2/2019</li>
             <li><a
                 href="https://eduardgorbunov.github.io/index.html#header3-a">Eduard
+
 
 
 
@@ -198,10 +202,12 @@
 
 
 
+
                 Elsukov</a> (Moscow Institute of Physics and
               Technology), 1/2019-2/2019</li>
             <li><a
                 href="https://www.researchgate.net/profile/Egor_Shulgin">Egor
+
 
 
 
@@ -255,10 +261,12 @@
 
 
 
+
                 Kovalev</a> (Moscow Institute of Physics and
               Technology), 1/2018-2/2018<br>
             </li>
             <li><a href="https://vcc.kaust.edu.sa/Pages/Gasanov.aspx">Elnur
+
 
 
 
@@ -317,10 +325,12 @@
 
 
 
+
                 Gorbunov</a> (Moscow Institute of Physics and
               Technology), 1/2018-2/2018</li>
             <li><a
                 href="https://www.imo-official.org/participant_r.aspx?id=26648">Slavomír
+
 
 
 
@@ -341,6 +351,7 @@
 
 
 
+
                 Sahu</a> (IIT Kanpur), 5/2017-7/2017, now: PhD student @
               KAUST<br>
             </li>
@@ -348,10 +359,13 @@
           <h2>Visitors<br>
           </h2>
           <ul>
+            <li><a href="http://sstich.ch">Sebastian Stich</a> (EPFL),
+              11/2019</li>
             <li><a href="https://grishchenko.org">Dmitriy Grishchenko</a>
               (Grenoble), 11-12/2019</li>
             <li><a
 href="https://scholar.google.com.hk/citations?user=dQSGQSAAAAAJ&amp;hl=zh-CN">Xiuxian
+
 
 
 
@@ -363,6 +377,7 @@ href="https://scholar.google.com.hk/citations?user=dQSGQSAAAAAJ&amp;hl=zh-CN">Xi
                 Bresson</a> (NTU Singapore), 4/2019<br>
             </li>
             <li><a href="https://www.hse.ru/en/org/persons/219293044">Alexey
+
 
 
 
@@ -396,6 +411,7 @@ href="https://scholar.google.com.hk/citations?user=dQSGQSAAAAAJ&amp;hl=zh-CN">Xi
 
 
 
+
                 Kamzolov</a> (Moscow Institute of Physics and
               Technology), 1/2019-2/2019</li>
             <li><a href="https://gowerrobert.github.io/">Robert Gower</a>
@@ -403,6 +419,7 @@ href="https://scholar.google.com.hk/citations?user=dQSGQSAAAAAJ&amp;hl=zh-CN">Xi
             <li><a href="http://sstich.ch">Sebastian Stich</a> (EPFL),
               10-11/2018</li>
             <li><a href="https://vision.in.tum.de/members/moellenh">Thomas
+
 
 
 
@@ -465,6 +482,7 @@ href="https://scholar.google.com.hk/citations?user=dQSGQSAAAAAJ&amp;hl=zh-CN">Xi
 
 
 
+
                 Ehrhardt</a> (University of Cambridge), 1/2018-2/2018<br>
             </li>
             <li><a href="http://www.maths.ed.ac.uk/%7Es1461357/">Nicolas
@@ -474,6 +492,7 @@ href="https://scholar.google.com.hk/citations?user=dQSGQSAAAAAJ&amp;hl=zh-CN">Xi
               (Télécom ParisTech), 10/2017<br>
             </li>
             <li><a href="https://www.hse.ru/en/staff/nikitadoikov">Nikita
+
 
 
 
@@ -573,6 +592,7 @@ href="https://scholar.google.com.hk/citations?user=dQSGQSAAAAAJ&amp;hl=zh-CN">Xi
 
 
 
+
                 Ribeiro</a> (10/2014<span class="style1" style="width:
                 300px;">–</span>3/2015)</li>
             <li>current position: Associate Professor, Federal
@@ -613,6 +633,7 @@ href="https://scholar.google.com.hk/citations?user=dQSGQSAAAAAJ&amp;hl=zh-CN">Xi
 
 
 
+
               <br>
             </li>
             <li>current position: Assistant Professor, University of
@@ -620,6 +641,7 @@ href="https://scholar.google.com.hk/citations?user=dQSGQSAAAAAJ&amp;hl=zh-CN">Xi
           </ul>
           <ul>
             <li><a href="http://perso.telecom-paristech.fr/%7Eofercoq/">Olivier
+
 
 
 
@@ -691,6 +713,7 @@ href="http://www.canterbury.ac.nz/spark/Researcher.aspx?Researcherid=4085405">Ra
 
 
 
+
                 Tappenden</a> (2/2012<span class="style1" style="width:
                 300px;">–</span>7/2014)</li>
             <li>current position: Assistant Professor, University of
@@ -700,6 +723,7 @@ href="http://www.canterbury.ac.nz/spark/Researcher.aspx?Researcherid=4085405">Ra
           <ul>
             <li><a
 href="http://researcher.watson.ibm.com/researcher/view.php?person=ie-jakub.marecek">Jakub
+
 
 
 
@@ -779,6 +803,7 @@ href="http://researcher.watson.ibm.com/researcher/view.php?person=ie-jakub.marec
 
 
 
+
                 Loizou</a> (10/2015<span class="style1" style="width:
                 300px;">–</span>6/2019)</li>
             <li>thesis: Randomized iterative methods for linear systems:
@@ -790,6 +815,7 @@ href="http://researcher.watson.ibm.com/researcher/view.php?person=ie-jakub.marec
           <ul>
             <li><a
                 href="http://www.inf.ed.ac.uk/people/students/Theo_Pavlakou.html">Theo
+
 
 
 
@@ -872,6 +898,7 @@ href="http://researcher.watson.ibm.com/researcher/view.php?person=ie-jakub.marec
 
 
 
+
                 Csiba</a> (9/2014<span class="style1" style="width:
                 300px;">–present</span>)</li>
             <li>thesis: Data sampling strategies in stochastic
@@ -913,6 +940,7 @@ href="http://researcher.watson.ibm.com/researcher/view.php?person=ie-jakub.marec
 
 
 
+
                 Bravi</a> (3/2015<span class="style1" style="width:
                 300px;">–</span>6/2015)</li>
             <li>visiting PhD student from University of Florence, Italy
@@ -922,6 +950,7 @@ href="http://researcher.watson.ibm.com/researcher/view.php?person=ie-jakub.marec
           <ul>
             <li><a
 href="https://scholar.google.com/citations?user=C3ujEF0AAAAJ&amp;hl=zh-CN">Minnan
+
 
 
 
@@ -997,9 +1026,11 @@ href="https://scholar.google.com/citations?user=C3ujEF0AAAAJ&amp;hl=zh-CN">Minna
 
 
 
+
                 Pavlakou</a> (2015) - MSc dissertation</li>
             <li><a
 href="http://www.inf.ed.ac.uk/people/students/Georgios_Papamakarios.html">George
+
 
 
 
@@ -1044,11 +1075,13 @@ href="http://www.inf.ed.ac.uk/people/students/Georgios_Papamakarios.html">George
 
 
 
+
                 Labant</a> (2016), Data Scientist at Department of
               Education, United Kingdom<br>
             </li>
             <li><a
                 href="https://uk.linkedin.com/in/jakob-kisiala-5807001b">Jakob
+
 
 
 
@@ -1107,9 +1140,11 @@ href="http://www.inf.ed.ac.uk/people/students/Georgios_Papamakarios.html">George
 
 
 
+
                 China</a>&nbsp;</li>
             <li>Meensuk Punlavee (2013)&nbsp;</li>
             <li><a href="https://www.linkedin.com/in/abankswatson">Alexander
+
 
 
 
@@ -1124,6 +1159,7 @@ href="http://www.inf.ed.ac.uk/people/students/Georgios_Papamakarios.html">George
             </li>
             <li><a
                 href="http://scholar.google.com/citations?user=vMMDhTUAAAAJ&amp;hl=en">Christos
+
 
 
 
@@ -1177,6 +1213,7 @@ href="http://www.inf.ed.ac.uk/people/students/Georgios_Papamakarios.html">George
 
 
 
+
                 Karanika</a> (2010), Modelling &amp; Analytics Manager
               at Royal Bank of Scotland</li>
             <li>Robie King (2010)&nbsp;</li>
@@ -1199,6 +1236,7 @@ href="http://www.inf.ed.ac.uk/people/students/Georgios_Papamakarios.html">George
             </li>
             <li><a
 href="https://warwick.ac.uk/fac/sci/mathsys/people/students/2014intake/peneva/">Iliana
+
 
 
 
@@ -1239,8 +1277,10 @@ href="https://warwick.ac.uk/fac/sci/mathsys/people/students/2014intake/peneva/">
 
 
 
+
                 Filipecki</a> (2011, Edinburgh Mathematics), now: <a
                 href="https://de.linkedin.com/in/bartosz-filipecki-24923a85">postdoc
+
 
 
 
@@ -1267,6 +1307,7 @@ href="https://www.bloomberg.com/research/stocks/private/person.asp?personId=2645
 
 
 
+
                 @ Sagamore Investments </a><br>
             </li>
             <li>Bartosz Filipecki (2010, Edinburgh Mathematics)<br>
@@ -1277,6 +1318,7 @@ href="https://www.bloomberg.com/research/stocks/private/person.asp?personId=2645
             <li><a
                 href="http://esd.sutd.edu.sg/faculty/selin-damla-ahipasaoglu/">Selin
 D.
+
 
 
 
@@ -1342,41 +1384,12 @@ D.
 
 
 
+
                 Baes</a> (University of Zurich)</li>
-            <li><a href="http://maiage.jouy.inra.fr/?q=fr/bergou">Elhoucine
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-                Bergou</a> (INRA)</li>
+            <li><a href="http://maiage.jouy.inra.fr/?q=fr/bergou">El
+                Houcine Bergou</a> (INRA)</li>
             <li><a href="https://sites.google.com/site/armineftekhari/">Armin
+
 
 
 
@@ -1441,8 +1454,10 @@ D.
 
 
 
+
                 Ehrhardt</a> (Cambridge)</li>
             <li><a href="http://www.iam.fmph.uniba.sk/ospm/Harman/">Radoslav
+
 
 
 
@@ -1512,8 +1527,10 @@ D.
 
 
 
+
                 Nesterov</a> (Louvain)</li>
             <li><a href="https://www.researchgate.net/profile/Tie_Ni">Tie
+
 
 
 
@@ -1548,6 +1565,7 @@ D.
                 Ni</a> (Liaoning Technical University)</li>
             <li><a
                 href="http://www-syscom.univ-mlv.fr/%7Epesquet/index.htm">Jean-Christophe
+
 
 
 
@@ -1616,9 +1634,11 @@ D.
 
 
 
+
                 Stich</a> (Louvain)</li>
             <li><a
 href="https://www.liverpool.ac.uk/mathematical-sciences/staff/tuomo-valkonen/">Tuomo
+
 
 
 
