--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
       <div id="wrapper" class="main">
         <div id="content">
           <h3>November 24, 2019</h3>
-          <h1>Loopless SVRG Accepted to ALT 2020<br>
+          <h1>"Loopless" Paper Accepted to ALT 2020<br>
           </h1>
           <br>
           Our paper <a href="https://arxiv.org/abs/1901.08689"> "Don't
             Jump Through Hoops and Remove Those Loops: SVRG and Katyusha
             are Better Without the Outer Loop"</a>, joint work with <a
             href="https://www.dmitry-kovalev.com/">Dmitry Kovalev</a>
-          and <a href="https://samuelhorvath.github.io/">Samuel Horváth</a>
-          has been accepted to <a
+          and <a href="https://samuelhorvath.github.io/">Samuel
+            Horváth,</a> has been accepted to <a
             href="http://alt2020.algorithmiclearningtheory.org">ALT 2020</a>.<br>
           <br>
           <br>
