--- a/index.html
+++ b/index.html
@@ -37,70 +37,73 @@
 <br>
 We will present several papers at NeurIPS, in the main
 conference and at some of the workshops. Here they are, listed
-by date of presentation:<br>
-<br>
+by date of presentation:<br> <br>
+
 <h2>Main Conference</h2>
+
 1) <a href="https://arxiv.org/abs/1905.10874">RSN: Randomized
 Subspace Newton</a><br>
 Robert Mansel Gower, Dmitry Kovalev, Felix Lieder and Peter
 Richtárik<br>
-<a
-href="https://nips.cc/Conferences/2019/Schedule?showEvent=13295">schedule</a><br>
-Dec 10<br>
-&nbsp;<br>
+<a href="https://nips.cc/Conferences/2019/Schedule?showEvent=13295">schedule</a><br>
+Dec 10<br><br>
+
 2) <a href="https://arxiv.org/abs/1905.11768">Stochastic
 proximal Langevin algorithm: potential splitting and
 nonasymptotic rates</a><br>
 Adil Salim, Dmitry Kovalevand Peter Richtárik<br>
 <a
 href="https://nips.cc/Conferences/2019/Schedule?showEvent=15749">schedule</a><br>
-Dec 10<br>
-&nbsp;<br>
+Dec 10<br> <br>
+
 3) <a href="https://arxiv.org/abs/1906.04370">Maximum mean
 discrepancy gradient flow</a><br>
 Michael Arbel, Anna Korba, Adil Salim and Arthur Gretton<br>
-<a
-href="https://nips.cc/Conferences/2019/Schedule?showEvent=13759">schedule</a><br>
-Dec 10<br>
-&nbsp;<br>
+<a href="https://nips.cc/Conferences/2019/Schedule?showEvent=13759">schedule</a><br>
+Dec 10<br> <br>
+
 4) <a href="https://arxiv.org/abs/1904.09265">SSRGD: Simple
 stochastic recursive gradient descent for escaping saddle
 points</a><br>
 Zhize Li<br>
 <a
 href="https://nips.cc/Conferences/2019/Schedule?showEvent=13368">schedule<br>
-</a>Dec 10 <br>
-&nbsp;<br>
+</a>Dec 10 <br><br>
+
 5) <a href="https://arxiv.org/abs/1905.12412">A unified
 variance-reduced accelerated gradient method for convex
 optimization</a><br>
 Zhize Li and Guanghui Lan<br>
-<a
-href="https://nips.cc/Conferences/2019/Schedule?showEvent=14058">schedule</a><br>
-Dec 11<br>
-&nbsp;<br>
+<a href="https://nips.cc/Conferences/2019/Schedule?showEvent=14058">schedule</a><br>
+Dec 11<br> <br>
+
 <h2>Beyond First Order Methods in ML (Dec 13) </h2>
+
 6) <a href="https://arxiv.org/abs/1912.01597">Stochastic
 Newton and cubic Newton methods with simple local
 linear-quadratic rates</a><br>
 Dmitry Kovalev, Konstantin Mishchenko and Peter Richtárik<br>
 <br>
-<h2>Workshop on Federated Learning for Data Privacy and
-Confidentiality (Dec 13) </h2>
+
+<h2>Workshop on Federated Learning for Data Privacy and Confidentiality (Dec 13) </h2>
+
 7) <a href="https://arxiv.org/abs/1909.04716">Gradient
 descent with compressed iterates</a><br>
 Ahmed Khaled and Peter Richtárik<br>
-&nbsp;<br>
+<br>
+
 8) <a href="https://arxiv.org/abs/1909.04746">Better
 communication complexity for local SGD</a><br>
 Ahmed Khaled, Konstantin Mishchenko and Peter Richtárik<br>
-&nbsp;<br>
+<br>
+
 9) <a href="https://arxiv.org/abs/1909.04715">First analysis
 of local GD on heterogeneous data</a><br>
 Ahmed Khaled, Konstantin Mishchenko and Peter Richtárik<br>
 <br>
-<h2>Optimal Transport &amp; Machine Learning (Dec 13)<br>
-</h2>
+
+<h2>Optimal Transport &amp; Machine Learning (Dec 13)</h2>
+
 10) <a href="https://arxiv.org/abs/1909.06918">Sinkhorn
 algorithm as a special case of stochastic mirror descent</a><br>
 Konstantin Mishchenko<br>
@@ -117,14 +120,17 @@ Peter Richtárik<br>
 stochastic extragradient</a><br>
 Konstantin Mishchenko, Dmitry Kovalev, Egor Shulgin, Peter
 Richtárik, and Yura Malitsky<br>
+
 <br>
 <br>
-<img alt=""
-src="file:///Users/richtap/Documents/WORK/GitHub/My%20GitHub%20Pages%20website/imgs/fancy-line.png"
-height="36" width="196"> <br>
+<img alt="" src="imgs/fancy-line.png" height="36" width="196"> 
 <br>
+<br>
+
+
 <h3>December 3, 2019</h3>
 <h1>New Paper</h1>
+
 <br>
 <span class="important">New paper out: </span><a
 href="https://arxiv.org/abs/1912.01597">"Stochastic Newton
