--- a/index.html
+++ b/index.html
@@ -163,11 +163,11 @@ This work was accepted as a spotlight paper to the <a
 href="https://sites.google.com/site/optneurips19/">NeurIPS
 2019 Workshop "Beyond First Order Methods in ML"</a>, taking
 place in Vancouver on December 13, 2019. <br>
+
 <br>
 <br>
-<img alt=""
-src="file:///Users/richtap/Documents/WORK/GitHub/My%20GitHub%20Pages%20website/imgs/fancy-line.png"
-height="36" width="196"> <br>
+<img alt="" src="imgs/fancy-line.png" height="36" width="196"> 
+<br> 
 <br>
 
 
@@ -1336,68 +1336,19 @@ href="https://cemse.kaust.edu.sa/vcc/news/jinhui-xiong-wins-best-paper-award-vmv
           I just took a 1hr flight from Moscow to Nizhny Novgorod. I
           will stay here until October 3 and deliver four lectures:
           three lectures on Oct 1 at <a
-            href="https://nnov.hse.ru/en/latna/conferences/ada2019">"Approximation
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-            and Data Analysis"</a> (an event organized by Moscow State
+            href="https://nnov.hse.ru/en/latna/conferences/ada2019">"Approximation and Data Analysis"</a> (an event organized by Moscow State
           University, Higher School of Economics and Russian Academy of
           Sciences), and one lecture on Oct 2 at <a
             href="http://www.huawei.com/ru">Huawei.</a> <br>
+
           <br>
           <br>
           <img alt="" src="imgs/fancy-line.png" width="196" height="36">
           <br>
           <br>
+
           <h3>September 26, 2019</h3>
-          <h1> Speeding up the Machine Learning Proces </h1>
+          <h1> Speeding up the Machine Learning Process </h1>
           <br>
           The KAUST Discovery Magazine has written a <a
 href="https://discovery.kaust.edu.sa/en/article/879/speeding-up-the-machine-learning-process%C2%A0">popular
@@ -1406,15 +1357,16 @@ href="https://discovery.kaust.edu.sa/en/article/879/speeding-up-the-machine-lear
           <br>
           <a href="http://proceedings.mlr.press/v97/qian19b">SGD:
             General Analysis and Improved Rates</a><br>
-          <a href="http://proceedings.mlr.press/v97/horvath19a.html">Nonconvex
-            Variance Reduced Optimization with Arbitrary Sampling</a> <br>
+          <a href="http://proceedings.mlr.press/v97/horvath19a.html">Nonconvex Variance Reduced Optimization with Arbitrary Sampling</a> <br>
           <a href="SAGA%20with%20Arbitrary%20Sampling">SAGA with
             Arbitrary Sampling</a><br>
+
           <br>
           <br>
           <img alt="" src="imgs/fancy-line.png" width="196" height="36">
           <br>
           <br>
+
           <h3>September 26, 2019</h3>
           <h1> MIPT </h1>
           <br>
