--- a/i_papers.html
+++ b/i_papers.html
@@ -54,18 +54,24 @@
           <br>
           <meta charset="utf-8">
           <h2> Prepared in 2019 </h2>
+
+          [115] Dmitry Kovalev, Konstantin Mishchenko and Peter Richtárik<br>
+          <b>Stochastic Newton and cubic Newton methods with simple local linear-quadratic rates</b><br>
+          [<a href="https://arxiv.org/abs/1912.01597">arXiv</a>] [code: SN, SCN]<br>
+          <br>
+
           [114] Ahmed Khaled, Konstantin Mishchenko and Peter Richtárik<br>
           <b>Better communication complexity for local SGD</b><br>
           <span class="important">Federated Learning Paper</span><br>
-          [<a href="https://arxiv.org/abs/1909.04746">arXiv</a>] [code:
-          local SGD]<br>
+          [<a href="https://arxiv.org/abs/1909.04746">arXiv</a>] [code: local SGD]<br>
           <br>
+
           [113] Ahmed Khaled and Peter Richtárik<br>
           <b>Gradient descent with compressed iterates</b><br>
           <span class="important">Federated Learning Paper</span><br>
-          [<a href="https://arxiv.org/abs/1909.04716">arXiv</a>] [code:
-          GDCI]<br>
+          [<a href="https://arxiv.org/abs/1909.04716">arXiv</a>] [code: GDCI]<br>
           <br>
+
           [112] Ahmed Khaled, Konstantin Mishchenko and Peter Richtárik<br>
           <b>First analysis of local GD on heterogeneous data</b><br>
           <span class="important">Federated Learning Paper</span><br>
