--- a/index.html
+++ b/index.html
@@ -125,6 +125,10 @@
             derivative free optimization method with momentum</a> <br>
           Eduard Gorbunov, Adel Bibi, Ozan Sener, El Houcine Bergou and
           Peter Richtárik<br>
+          <br>
+          <a href="posters/Poster-SMTP.pdf"><img
+              src="posters/Poster-SMTP_small.png" alt="SMTP" border="0"
+              width="371" height="500"></a><br>
           &nbsp;<br>
           12) <a href="https://arxiv.org/abs/1905.11373">Revisiting
             stochastic extragradient</a><br>
