--- a/index.html
+++ b/index.html
@@ -56,6 +56,10 @@
             href="https://nips.cc/Conferences/2019/Schedule?showEvent=15749">schedule</a><br>
           Dec 10<br>
           <br>
+          <a href="posters/Poster-SPLA.pdf"><img
+              src="posters/Poster-SPLA_small.png" alt="SPLA" border="0"
+              width="500" height="375"></a><br>
+          <br>
           3) <a href="https://arxiv.org/abs/1906.04370">Maximum mean
             discrepancy gradient flow</a><br>
           Michael Arbel, Anna Korba, Adil Salim and Arthur Gretton<br>
