--- a/index.html
+++ b/index.html
@@ -81,11 +81,13 @@
           As of today, <a href="https://fhanzely.github.io/index.html">Filip
 
 
-            Hanzely</a> is on a week-long visit to the Machine Learning
-          and Optimization Lab at EPFL, led by Martin Jaggi. He will
-          give a talk based on the paper "One Method to Rule Them All:
-          Variance Reduction for Data, Parameters and Many New Methods"
-          on December 18. The talk is based on <a
+            Hanzely</a> is on a week-long visit to the <a
+            href="https://www.epfl.ch/labs/mlo/">Machine Learning and
+            Optimization Lab</a> at EPFL, led by <a
+            href="https://people.epfl.ch/martin.jaggi">Martin Jaggi</a>.
+          He will give a talk based on the paper "One Method to Rule
+          Them All: Variance Reduction for Data, Parameters and Many New
+          Methods" on December 18. The talk is based on <a
             href="https://arxiv.org/abs/1912.01597">this paper</a>,
           joint work with me. To get a quick idea about the paper, check
           out this poster: <br>
